--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   mqtt_client: ^10.0.3
   flutter_svg: ^2.0.9
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
