--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   webview_flutter: ^4.5.0
   http: ^1.2.0
+  path_drawing: ^1.0.1
 
 dev_dependencies:
   flutter_test:
